# rust-simple-vm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
docs/html/: manual.css  manual.html  toc.js
lang/: Cargo.toml
lang/src/: args.rs  ast.rs  character.rs  combinator.rs  error.rs  language.rs  lib.rs  main.rs  parse.rs
lang/src/compile/: block.rs  codegen.rs  context.rs  error.rs  mod.rs  resolve.rs  util.rs
lang/src/compile/codegen/: block.rs  expression.rs  mod.rs  optimize.rs  toplevel.rs  util.rs
lang/src/language/: expression.rs  lex.rs  statement.rs  tokenize.rs
lang/src/tests/: mod.rs
lang/tests/: array.rs  common.rs  compiler.rs  conditional.rs  expr.rs  foo.rs  functions.rs  global.rs  loops.rs  ptr.rs  string.rs  struct.rs
lib/macros/: Cargo.toml
lib/macros/src/: lib.rs
progs/: call_test.asm  fillscrn.foo  screen_test.asm  signed_imm.asm  test_mapped_mem.asm
progs/fib/: fib.asm
src/: io.rs  lib.rs  memory.rs  op.rs  op_fields.rs  register.rs  vm.rs  wasm.rs
src/pp/: macros.rs  mod.rs
tests/: arith.rs  common.rs  flow.rs  memory.rs  misc.rs  stack.rs  test.rs
vm/: Cargo.toml
vm/lib/macros/: Cargo.toml
vm/lib/macros/src/: lib.rs
vm/src/: io.rs  lib.rs  memory.rs  op.rs  op_fields.rs  register.rs  vm.rs
vm/src/binfmt/: mod.rs
vm/src/pp/: macros.rs  mod.rs
vm/src/resolve/: mod.rs
vm/src/wasm/: asm.rs  mod.rs
vm/tests/: arith.rs  asm.rs  common.rs  flow.rs  memory.rs  misc.rs  stack.rs  test.rs
www/: help.html  hw.js  index.html  readme.html  test.html
